--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "aws-sdk": "^2.1161.0",
     "express": "^4.17.1",
     "serverless-http": "^2.7.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.40",
