--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1161.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "pg": "^8.7.3",
     "serverless-http": "^2.7.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
