--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "knex": "^2.2.0",
     "pg": "^8.7.3",
     "serverless-http": "^2.7.0",
     "uuid": "^8.3.2",
