- last commit from mac

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,7 +54,7 @@ functions:
           method: get
 
   create_user:
-    handler: src/api/users.getUser
+    handler: src/api/users.createUser
     events:
       - httpApi:
           path: /users
