--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "mymessages-api",
-  "version": "1.0.0",
-  "description": "",
-  "dependencies": {
-    "aws-lambda": "^1.0.7",
-    "dotenv": "^16.0.1",
-    "knex": "^2.2.0",
-    "pg": "^8.7.3",
-    "serverless-http": "^2.7.0",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "debug" : "export SLS_DEBUG=* && node --inspect /usr/local/bin/serverless offline"
-  },
-  "devDependencies": {
-    "serverless-offline": "^8.8.0"
-  }
+    "name": "mymessages-api",
+    "version": "1.0.0",
+    "description": "",
+    "dependencies": {
+        "aws-lambda": "^1.0.7",
+        "dotenv": "^16.0.1",
+        "knex": "^2.2.0",
+        "pg": "^8.7.3",
+        "serverless-http": "^2.7.0",
+        "uuid": "^8.3.2",
+        "yup": "^0.32.11"
+    },
+    "scripts": {
+        "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline"
+    },
+    "devDependencies": {
+        "serverless-offline": "^8.8.0"
+    }
 }
