--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "dependencies": {
         "aws-lambda": "^1.0.7",
+        "aws-sdk": "^2.1356.0",
         "dotenv": "^16.0.1",
         "knex": "^2.2.0",
         "pg": "^8.7.3",
