--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
     "dependencies": {
         "aws-lambda": "^1.0.7",
         "aws-sdk": "^2.1356.0",
+        "axios": "^1.6.8",
         "dotenv": "^16.0.1",
         "knex": "^2.2.0",
         "pg": "^8.7.3",
+        "qs": "^6.12.0",
         "serverless-http": "^2.7.0",
         "uuid": "^8.3.2",
         "yup": "^0.32.11"
     },
     "scripts": {
-        "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline"
+        "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline --stage dev",
+        "debug_mac": "SLS_DEBUG=* && node --inspect node_modules/serverless/bin/serverless offline --stage dev",
+        "build-prisma": "prisma generate && mkdir -p dist/prisma && cp -r node_modules/@prisma/client/runtime dist/prisma/",
+        "start": "serverless offline --stage prod",
+        "deploy": "serverless prune -n 1 && serverless deploy --stage dev",
+        "login": "serverless login"
     },
     "devDependencies": {
-        "serverless-offline": "^8.8.0"
+        "@types/qs": "^6.9.15",
+        "@types/uuid": "^9.0.8",
+        "serverless-offline": "^13.3.3",
+        "typescript": "^5.4.5"
     }
 }
