--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-    "name": "mymessages-api",
-    "version": "1.0.0",
-    "description": "",
-    "dependencies": {
-        "@prisma/client": "^5.14.0",
-        "aws-lambda": "^1.0.7",
-        "aws-sdk": "^2.1356.0",
-        "axios": "^1.6.8",
-        "dotenv": "^16.0.1",
-        "knex": "^2.2.0",
-        "pg": "^8.7.3",
-        "qs": "^6.12.0",
-        "serverless-http": "^2.7.0",
-        "uuid": "^8.3.2",
-        "yup": "^0.32.11"
-    },
-    "scripts": {
-        "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline --stage dev",
-        "debug_mac": "SLS_DEBUG=* && node --inspect node_modules/serverless/bin/serverless offline --stage dev",
-        "build-prisma": "prisma generate && mkdir -p dist/prisma && cp -r node_modules/@prisma/client/runtime dist/prisma/",
-        "start": "serverless offline --stage prod",
-        "deploy": "serverless prune -n 1 && serverless deploy --stage dev",
-        "login": "serverless login"
-    },
-    "devDependencies": {
-        "@types/node": "^20.13.0",
-        "@types/qs": "^6.9.15",
-        "@types/uuid": "^9.0.8",
-        "prisma": "^5.14.0",
-        "serverless-offline": "^13.3.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.4.5"
-    }
+  "name": "mymessages-api",
+  "version": "1.0.0",
+  "description": "",
+  "author": "",
+  "license": "ISC",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline --stage dev",
+    "debug_mac": "SLS_DEBUG=* && node --inspect node_modules/serverless/bi /serverless offline --stage dev",
+    "build-prisma": "prisma generate && mkdir -p dist/prisma && cp -r node_modules/@prisma/client/runtime dist/prisma/",
+    "start": "serverless offline --stage dev",
+    "deploy": "serverless prune -n 1 && serverless deploy --stage dev",
+    "login": "serverless login"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1632.0",
+    "axios": "^1.7.2",
+    "fs": "^0.0.1-security",
+    "mongodb": "^6.7.0",
+    "qs": "^6.12.1",
+    "serverless-http": "^3.2.0",
+    "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.13.0",
+    "@types/qs": "^6.9.15",
+    "@types/uuid": "^9.0.8",
+    "prisma": "^5.14.0",
+    "serverless-offline": "^13.6.0",
+    "serverless-plugin-typescript": "^2.1.5",
+    "serverless-prune-plugin": "^2.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
