--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "resolveJsonModule": true,
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
