--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "SET SLS_DEBUG=* && node --inspect node_modules\\serverless\\bin\\serverless offline --stage dev",
     "debug_mac": "SLS_DEBUG=* && node --inspect node_modules/serverless/bi /serverless offline --stage dev",
     "build-prisma": "prisma generate && mkdir -p dist/prisma && cp -r node_modules/@prisma/client/runtime dist/prisma/",
-    "start": "serverless offline --stage dev --host 0.0.0.0",
+    "start": "serverless offline --stage prod --host 0.0.0.0",
     "deploy": "serverless prune -n 1 && serverless deploy --stage dev",
     "login": "serverless login"
   },
