--- a/package.json
+++ b/package.json
@@ -14,23 +14,18 @@
     "login": "serverless login"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "axios": "^1.7.2",
-    "fs": "^0.0.1-security",
-    "mongodb": "^6.7.0",
+    "@prisma/client": "^5.16.2",
+    "moment": "^2.30.1",
     "qs": "^6.12.1",
-    "serverless-http": "^3.2.0",
-    "yup": "^1.4.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
     "@types/qs": "^6.9.15",
     "@types/uuid": "^9.0.8",
-    "prisma": "^5.14.0",
-    "serverless-offline": "^13.6.0",
+    "prisma": "^5.16.2",
     "serverless-plugin-typescript": "^2.1.5",
-    "serverless-prune-plugin": "^2.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.3"
   }
 }
